--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify-icons/mdi": "^1.1.15",
+    "@iconify/react": "^1.1.4",
     "@types/react-router-dom": "^5.1.7"
   }
 }
